--- a/test-task/src/Components/Navbar/Navbar.module.css
+++ b/test-task/src/Components/Navbar/Navbar.module.css
@@ -105,15 +105,43 @@ p{
     font-size: 17px;
     padding: 5px 0px;
     transition: 0.2s;
+
+}
+
+.Navbar_instruments__item:first-child{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+
+}
+
+.Navbar_instruments__favoriteLength{
+    width: 23px;
+    height: 23px;
+    border-radius: 50%;
+    background-color: #e70f27;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.Navbar_instruments__itemInfo{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .Navbar_instruments__item a{
     text-decoration: none;
     color: #000;
+    width: 100%;
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -126,3 +154,4 @@ p{
     color: #e70f27;
     transition: 0.2s;
 }
+
