--- a/test-task/src/Components/Instruments/Instruments.module.css
+++ b/test-task/src/Components/Instruments/Instruments.module.css
@@ -1,10 +1,8 @@
-.Instruments {
-    min-height: 100%;
-    padding: 20px 0px;
-    width: 100%;
+.Instruments{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 35px;
 }
 .Instruments img {
     width: 10px;
@@ -12,57 +10,20 @@
     margin-left: 5px;
 }
 
-
-.active{
-    color: rgb(231, 15, 39, 0.5) ;
-}
-
-.Instruments_header{
-    width: 85%;
-    display: flex;
-    color: lightgray;
-    font-weight: bold;
-}
-.Instruments_header__titles{
-    width: 400px;
-    display: flex;
-    margin-left: 55px;
-}
-
-.Instruments_header__projects{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 150px;
-}
-
-.Instruments_header__partners{
-    width: 150px;
+.Instruments table {
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
-.Instruments_header__rate{
-    width: 250px;   
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-}
-.Instruments_items{
-    width: 85%;
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 20px;
-}
-table {
-    border-collapse: collapse;
+
+.Instruments table thead {
     width: 100%;
 }
 
-.selectedPage{
-    font-weight: bold;
-    padding: 5px; 
+.Instruments table tbody{
+    width: 100%;
+}
+
+.active{
+    color: rgb(231, 15, 39, 0.5) ;
 }
